1.15-1.1.9:
- Re-added some XNet API classes
- Made dimensional shard oregen slightly more common in the overworld

1.15-1.1.8:
- Fixed truetype rendering

1.15-1.1.7:
- Update to latest McJtyLib

1.15-1.1.6:
- Fixed a problem on servers

1.1.5:
- Safer client-side registrations (thread-safety)
- Various cleanups and fixes

1.1.4:
- Fixed a potential exploit which could be used to attack a server

1.1.3-beta:
- New 'tick order' system for the endergenic power generator

1.1.2-beta:
- Update for latest McJtyLib

1.1.1-beta:
- Dependency fix

1.1.0-beta:
- Better tooltips for many blocks and items
- The filter module now supports an alternative for the ore dictionary where it will try to match blocks using common known tags
- The filter module is now unlimited and has full support for tags. It is also whitelist mode by default now
- The Tablet is back! It now supports four different slots and can switch between them using the '[' and ']' keys (by default)
- New tag 'forge:wrench' which the Smart Wrench uses
- Fixed the recipes for the vanilla recipe book
- Moved most of the configs from common to server (so that they are saved with the world and synced to the client)

1.0.1-alpha:
- Ported the filter module (for storage, builder, ...)

0.0.12:
- Updates to latest McJtyLib

0.0.11:
- Information Screen from RFTools Power has been moved to RFTools Base
- The information screen will now remember the 'mode' when it is broken
- Right clicking the information screen will activate the block behind it instead
- The XNet API is now part of RFToolsBase

0.0.10:
- Fixed a serious networking problem which could cause 'invalid discriminator spam' on servers

0.0.9:
- Fixed a networking problem on servers

0.0.8:
- API changes for the storage scanner
- Update to latest McJtyLib

0.0.7:
- The Machine infuser actually works
- Reintroduced infused diamond and enderpearls as crafting ingredients

0.0.3:
- Update to latest Forge

0.0.2:
- Update to 1.14.4