@@ -1,3 +1,6 @@
+Upcoming:
+- Dimensional shard ore is now attached to the forge:ores tag
+
 1.15-1.1.9:
 - Re-added some XNet API classes
 - Made dimensional shard oregen slightly more common in the overworld
